# PHASE

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-28-phase-asset-tool.md
docs/superpowers/specs/: 2026-05-28-phase-asset-tool-design.md
src/: auth.rs  cache.rs  config.rs  main.rs  notion.rs  polyhaven.rs  slug.rs  updater.rs  validation.rs
src/copy/: engine.rs  job.rs  mod.rs  plan.rs  tests.rs
src/ui/: asset_types.rs  authors.rs  colors.rs  dialogs.rs  file_watcher.rs  focus_refresh.rs  group_selector.rs  jobs.rs  layout.rs  loading_indicator.rs  menu.rs  mod.rs  scripts.rs  status_groups.rs  table.rs  tests.rs  textures.rs  thumbnails.rs
src/validation/: dismissed.rs  local_freshness.rs  mod.rs  needs_review.rs  root_entries.rs  workers.rs
