[package]
name = "phase"
version = "1.3.0"
edition = "2021"
description = "PHASE — internal asset pipeline tool"

[dependencies]
eframe = { version = "0.27", default-features = false, features = [
  "default_fonts",
  "glow",
] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
image = { version = "0.24", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
] }
resvg = "0.45"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
blake3 = "1"
filetime = "0.2"
open = "5"
rfd = "0.14"
dirs = "5"
semver = "1"
self_update = { version = "0.44", default-features = false, features = [
  "reqwest",
  "rustls",
  "archive-zip",
  "compression-zip-deflate",
] }
anyhow = "1"
thiserror = "1"
log = "0.4"
simplelog = "0.12"
tiny-skia = "0.11"
usvg = "0.45"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
urlencoding = "2"
notify = "8.2.0"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
